# meta-models

./: .gitignore  README.md  pyproject.toml
meta_models/nn/: __init__.py  linear.py  vit.py
tests/: test_transformer.py
