[tool.poetry]
name = "meta-models"
version = "0.1.0"
description = ""
authors = ["neverusethisname <13056660723@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
